# mancalatron

./: CMakeLists.txt  README.md  conanfile.txt  mancalatron  mancalatron.cpp  mancalatron.h  mancalatron_v2.cpp  mancalatron_v2.h  mancalatron_v3  mancalatron_v3.cpp  mancalatron_v3.h  mancalatron_v4.cpp  mancalatron_v4.h
src/: gamestate.cpp  mancalatron_v4.cpp  mancalatron_v4.h  utils.cpp
